[tool.poetry]
name = "loadingeffect"
version = "0.1.0"
description = "Simple loading effect in the terminal"
authors = ["ethanlchristensen <ethanlchristensen@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bruhanimate = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
